css/style.css
/* ... */
button, input {
    padding: 0;
    margin: 0;
    border: 0;
    border: none;
    line-height: normal;
}

.bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

@media (min-width: 768px) {
    .bd-placeholder-img-lg {
        font-size: 3.5rem;
  }
}

h3:hover {
    text-decoration: none;
    color: var(--color-gray-4);
}
a:link { text-decoration: none; }
a:visited { text-decoration: none; }
a:hover { text-decoration: none; }
a:active { text-decoration: none; }

.site-header {
    line-height: 1;
    margin: 0;
    padding: 0;
}

.site-header-logo {
    justify-content: center;
    display: flex;
    font-size: 2.25rem;
}

.site-header-logo:hover {
    text-decoration: none;
}
#header-bot {
    padding: 0 0 5px 0;
}

#nav{
    margin: 5px 0 0 0;
    padding: 0;
}


body {
    font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
    max-width: 1200px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
    font-size: 1.375rem;
    line-height: 1.15em;
    margin: 0;
    font-weight: 700;
    -webkit-font-smoothing: antialiased;
    color: var(--color-black);
}

.display-4 {
    font-size: 2.5rem;
}
@media (min-width: 768px) {
    .display-4 {
        font-size: 3rem;
  }
}

.nav-scroller {
    position: relative;
    z-index: 2;
    height: 2.75rem;
    overflow-y: hidden;
}

.nav-scroller .nav {
    display: flex;
    flex-wrap: nowrap;
    padding-bottom: 1rem;
    margin-top: -1px;
    overflow-x: auto;
    text-align: center;
    white-space: nowrap;
    -webkit-overflow-scrolling: touch;
}

.nav-scroller .nav-link {
    padding-top: .75rem;
    padding-bottom: .75rem;
    font-size: .875rem;
}

.card-img-right {
    height: 100%;
    border-radius: 0 3px 3px 0;
}

.flex-auto {
    flex: 0 0 auto;
}

.h-250 { height: 250px; }
@media (min-width: 768px) {
    .h-md-250 { height: 250px; }
}

/* Pagination */
.blog-pagination {
    margin-bottom: 4rem;
}
.blog-pagination > .btn {
    border-radius: 2rem;
}

/* posts */
.blog-post {
     margin-bottom: 4rem;
}
.blog-post-title {
     margin-bottom: .25rem;
     font-size: 2.5rem;
}
.blog-post-meta {
     margin-bottom: 1.25rem;
     color: #727272;
}

/* Footer */
footer {
    border-top: 2px solid #e5e5e5;
    padding: 1px 0px 1px 0px;
}

#footer-logo {
    border-top: 1px solid #e5e5e5;
    padding: 10px 0px 20px 0px;
}


#todays-date {
      font-weight: bold;
      color: #121212;
      font-size: 0.7rem;
      font-family: nyt-franklin,helvetica,arial,sans-serif;
      width: auto;
      display: block;
}

#nyt-logo {
    align-content: center;
    justify-content: center;
    display: block;
      width: 430px;
      height: 58px;
}

h1, h2, h3, h4, h5, h6
{
      font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
      font-size: 1.375rem;
      line-height: 1.15em;
      margin: 0;
      font-weight: 700;
      -webkit-font-smoothing: antialiased;
}

p {
      color: var(--color-gray-5);
      font-family: nyt-imperial;
      font-size: 0.875rem;
      -webkit-letter-spacing: 0.1px;
      -moz-letter-spacing: 0.1px;
      -ms-letter-spacing: 0.1px;
      letter-spacing: 0.1px;
      line-height: 1.1875rem;
      margin: 0;
      padding: 0;
      position: relative;
}

#nav{
     border-style: none none double none;
    margin: 0px 0px 8px;
}

div#nav {
    margin: 0;
    padding: 0;
}

div#nav a{
    font: 12px nyt-franklin, helvetica, arial, sans-serif;
    padding: 4px;
    color: #000000;
}

div#nav nav{
    padding: 0 40px;
    margin: 7px 0px 0px 0px;
}


@media (max-width: 1149px) {
    div#nav nav{
        padding: 0 10px;
    }
}

div#nav a{
    padding: 0;
}
div#nav #cooking{
    border-left: 1px solid #e5e5e5;
}

hr.solid {
    border-top: 1px solid #ebebeb;
    opacity: 1;
    margin: 0;
}

#todays-paper {
    font: 12px nyt-franklin, helvetica, arial, sans-serif;
      display: inline-block;
      color: #121212;
}

#header-top {
      flex-direction: row;
      align-items: center;
      padding: 18px 0;
      height: 34px;
      background-color: #fff;
}

#desktop-section-button{
    cursor: pointer;
    font-family: nyt-franklin,helvetica,arial,sans-serif;
    text-transform: uppercase;
    display: inline-block;
    vertical-align: sub;
    margin-right: 8px;
    width: 33px;
    height:34px;
    padding: 8px 9px 9px 9px;
}

#desktop-section-button svg {
      height: 16px;
      width: 16px;
}

#desktop-section-button:hover, #search-button:hover {
     background-color: var(--color-gray-1);
}

div#language a{
    font-family: nyt-franklin,helvetica,arial,sans-serif;
    font-size: 10px;
    color:#000000;
    justify-content: end;
    text-transform: uppercase;
}



@media (min-width: 1034px) {
    #subscribe-button, #login-button, #search-submit {
        border-radius: 3px;
        cursor: pointer;
        font-family: nyt-franklin, helvetica, arial, sans-serif;
        transition: all 0.6s ease 0s;
        white-space: nowrap;
        vertical-align: middle;
        background-color: rgb(86, 123, 149);
        border: 1px solid rgb(50, 104, 145);
        font-size: 11px;
        line-height: 11px;
        font-weight: 700;
        letter-spacing: 0.05em;
        text-transform: uppercase;
        padding: 8px 12px;
        height: 29px;
        color: rgb(255, 255, 255);
        margin-right: 7px;
    }
}
#subscribe-button:hover, #login-button:hover, #search-submit:hover {
    background-color: rgb(50, 104, 145);
}
/* ... */

